@@ -1,0 +1,13 @@
+<h2>Slurm 22.05.6</h2>
+
+<h3>openapi/v0.0.38 (src/plugins/openapi/v0.0.38/openapi.json)</h3>
+
+<h4>Fix misnamed reference to prior version</h4>
+<table class="tchange">
+<tr class="trchange">
+	<td class="tdfield">Field modified</td>
+	<td class="tdchange">
+			.components.schemas."dbv0.0.38_tres_info".properties.tres
+	</td>
+</tr>
+</table>
