@@ -3178,7 +3178,7 @@
             }
           },
           "tres": {
-            "$ref": "#/components/schemas/dbv0.0.36_tres_list"
+            "$ref": "#/components/schemas/dbv0.0.38_tres_list"
           }
         }
       },
